# user_microservice

./: Dockerfile  alembic.ini  compose.test.yml  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: e63d7af6ac9f_.py
app/: exception.py  main.py  utils.py
app/api/: __init__.py  auth_deps.py  deps.py  item.py  user.py
app/core/: config.py
app/crud/: base.py  crud_user.py
app/db/: init_db.py  session.py
app/models/: device_login.py  user.py
app/schemas/: user.py
app/tests/: conftest.py
app/tests/api/: user_test.py
dev-keys/: jwt-key  jwt-key.pub
